<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/cast_end_pos_dial_backgraund"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCongrSnakeEndDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/congr_end_there_game"
        android:textColor="#171717"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/linLayBtEndEndPosDialog"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/cast_bg_answer_shadow"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:background="@drawable/fr_g_back_one"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/fr_g_back_two"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="@drawable/fr_g_back_theree"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:background="@drawable/fr_g_back_four"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:background="@drawable/fr_g_back_five"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btEnd"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:autoSizeTextType="uniform"
                                android:insetTop="0dp"
                                android:insetBottom="0dp"
                                android:paddingStart="15dp"
                                android:paddingEnd="15dp"
                                android:paddingTop="7dp"
                                android:paddingBottom="7dp"
                                android:text="@string/exit_layout"
                                android:textColor="@color/light_gray"
                                android:textStyle="bold"
                                app:cornerRadius="65dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayBtReturnEndPosDialog"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cast_bg_answer_shadow"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:background="@drawable/fr_g_back_one"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/fr_g_back_two"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="@drawable/fr_g_back_theree"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:background="@drawable/fr_g_back_four"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:background="@drawable/fr_g_back_five"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btReturn"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:autoSizeTextType="uniform"
                                android:insetTop="0dp"
                                android:insetBottom="0dp"
                                android:paddingStart="15dp"
                                android:paddingEnd="15dp"
                                android:paddingTop="7dp"
                                android:paddingBottom="7dp"
                                android:text="@string/try_again"
                                android:textColor="@color/light_gray"
                                android:textStyle="bold"
                                app:cornerRadius="65dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>